# rules_uv

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  readme.md
.bcr/: config.yml  metadata.template.json
.github/: CODEOWNERS  renovate-config.json  renovate.json  reviewers.json
.github/workflows/: automation-autorelease.yml  automation-autosquash.yml  automation-reviewbot.yml  ci.bazelrc  ci.yml  periodic-renovate.yml  periodic-update-multitool.yml  release.yml  release_prep.sh
dev/: BUILD.bazel
examples/multiple-inputs/: BUILD.bazel  MODULE.bazel  requirements.in  requirements.test.in  requirements.txt
examples/multiple-pyruntimes/: .bazelrc  BUILD.bazel  MODULE.bazel  requirements.in  requirements.txt  requirements_3_10.txt  requirements_3_11.txt
examples/typical/: .bazelrc  BUILD.bazel  MODULE.bazel  integration_test.sh  requirements.in  requirements.txt  requirements_linux.txt  requirements_twine.txt
examples/typical/site_packages_extra/: sitecustomize.py
examples/typical/site_packages_extra/lib/python/hello/: hello.py
uv/: BUILD.bazel  pip.bzl  uv_export.bzl  venv.bzl
uv/private/: BUILD.bazel  create_venv.bat  create_venv.sh  interpreter_path.bzl  pip.bzl  pip_compile.bat  pip_compile.sh  pip_compile_test.bat  pip_compile_test.sh  sync_venv.sh  transition_to_target.bzl  uv.lock.json  uv_export.bzl  uv_export.sh  uv_export_test.sh  venv.bzl
