load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

exports_files([
    "MODULE.bazel",
])

buildifier(
    name = "buildifier.fix",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
    visibility = ["//thm/buildtools/fix:__pkg__"],
)

buildifier_test(
    name = "buildifier.test",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    no_sandbox = True,
    workspace = "//:MODULE.bazel",
)
