"multiple pythons"

module(
    name = "uv__examples__multiple_pythons",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_uv", version = "0.0.0")
local_path_override(
    module_name = "rules_uv",
    path = "../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)
python.toolchain(
    python_version = "3.11",
)
use_repo(
    python,
    "python_3_10",
    "python_3_11",
)
