load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")

pip_compile(name = "generate_requirements_txt")

pip_compile(
    name = "generate_requirements_linux_txt",
    python_platform = "x86_64-unknown-linux-gnu",
    requirements_txt = "requirements_linux.txt",
)

create_venv(name = "create-venv")

create_venv(
    name = "create-venv-custom-destination",
    destination_folder = ".venv",
    site_packages_extra_files = ["sitecustomize.py"],
)
