load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")

pip_compile(name = "generate_requirements_txt")

pip_compile(
    name = "generate_requirements_linux_txt",
    python_platform = "x86_64-unknown-linux-gnu",
    requirements_txt = "requirements_linux.txt",
)

pip_compile(
    name = "generate_requirements_twine",
    python_platform = "x86_64-unknown-linux-gnu",
    requirements_in = ["twine~=5.1.1"],
    requirements_txt = "requirements_twine.txt",
)

create_venv(name = "create-venv")

create_venv(
    name = "create-venv-custom-destination",
    destination_folder = ".venv",
    site_packages_extra_files = [
        "site_packages_extra/sitecustomize.py",
    ],
)
